--- a/aa13-rpt09/Node/cds_dht22/package.json
+++ b/aa13-rpt09/Node/cds_dht22/package.json
@@ -15,6 +15,7 @@
   "author": "aa00",
   "license": "MIT",
   "dependencies": {
+    "mongoose": "^6.7.0",
     "serialport": "^9.2.4",
     "socket.io": "^2.4.1"
   }
